--- a/host/repluginbridge/build.gradle
+++ b/host/repluginbridge/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
+
+//设置Jitpack发布的Group
+//我的github账号是helen-x, 对应我的group就是com.github.helen-x
+group='com.github.wangfeihang'
 
 android {
     compileSdkVersion 28
